Fix overflow in html body

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,8 +25,13 @@
 
  body {
    min-width: 1269px;
-   overflow-x: scroll;
+   /* overflow-x: scroll; */
  }
+
+.container-fluid {
+ 
+  overflow-x: unset;
+}
 
 
 /*
